.class文件不需要提交

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,75 @@
 /target/classes/interview/thread/TestThread.class
 /target/classes/interview/thread/ThreadExample.class
 /target/classes/interview/thread/ThreadTest.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Base.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/sort/BubbleSort.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/ChildClass.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Chinese.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/ClassTest.class
+/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/trycatch/Demo.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/collection/Demo2$Sub.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/collection/Demo2$Super.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Demo2.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/collection/Demo2.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/trycatch/Demo3.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Demo4.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Demo5.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Demo6.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Demo7.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Demo8.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Ex.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Father.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Foo.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/HasStatic.class
+/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/target/interview-1.0-SNAPSHOT.war
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/bitarithmetic/Muti.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/MyApplication.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/linklist/MyLinkedList.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/thread/MyThead.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/Node.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Person.class
+/target/maven-archiver/pom.properties
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Print.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/sort/QuickSort.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/SecondMax.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Son.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/stack/Stack.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Sub.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Test$A.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Test$B.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/bitarithmetic/Test.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/string/Test.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Test.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/Test.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/thread/Test.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/bitarithmetic/Test2.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/string/Test2.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test2.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/Test2.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/thread/Test2.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/string/Test3.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test3.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/Test3.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/string/Test4.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test4.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/Test4.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Test5$Sub.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Test5$Super.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/algorithm/string/Test5.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/extend/Test5.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/Test5.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test6.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/Test6.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test7.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/datastructure/array/Test7.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test8.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test9.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/trycatch/Test10.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/Test11.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/trycatch/Test12.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/basic/TestChinese.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/thread/TestThread.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/thread/ThreadExample.class
+/target/interview-1.0-SNAPSHOT/WEB-INF/classes/interview/thread/ThreadTest.class
